--- a/.github/workflows/update-active-lots.yml
+++ b/.github/workflows/update-active-lots.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Pull latest changes
+        run: git pull origin main  # Add this line to pull the latest changes
+
       - name: Fetch active lots
         run: |
           curl -o active-lots.json http://simnation.ddns.net:9000/userapi/city/1/city.json
@@ -31,4 +34,4 @@ jobs:
           git config --local user.name "your-github-username"
           git add data/active-lots.json
           git commit -m "Update active lots JSON file"
-          git push
+          git push origin main  # Ensure you're pushing to the correct branch
